crates/px4/tests/trybuild/fail/async_fn.rs
use px4::{Args, main};

#[main]
async fn entry(_a: Args) {}

fn main() {}
